--- a/pages/App/Views/home.html
+++ b/pages/App/Views/home.html
@@ -114,10 +114,11 @@
 					<!--Destination Block-->
 					<div class="destination-block-two">
 						<div class="inner-box">
-							<div class="image-layer" $background-image="theme/featured-image-13.jpg"></div>
+							{$thumb = @@getImage('abuja-thumb');}
+							<div class="image-layer" style="background-image: url({$thumb});"></div>
 							<div class="image-box">
 								<figure class="image">
-									<a href=""><img $src="theme/featured-image-13.jpg" alt="" title=""></a>
+									<a href=""><img src="{$thumb}" alt="" title=""></a>
 								</figure>
 							</div>
 							<div class="caption-box">
@@ -139,10 +140,11 @@
 					<!--Destination Block-->
 					<div class="destination-block-two">
 						<div class="inner-box">
-							<div class="image-layer" $background-image="theme/featured-image-13.jpg"></div>
+							{$thumb = @@getImage('kaduna-thumb');}
+							<div class="image-layer" style="background-image: url({$thumb});"></div>
 							<div class="image-box">
 								<figure class="image">
-									<a href=""><img $src="theme/featured-image-13.jpg" alt="" title=""></a>
+									<a href=""><img src="{$thumb}" alt="" title=""></a>
 								</figure>
 							</div>
 							<div class="caption-box">
@@ -164,10 +166,11 @@
 					<!--Destination Block-->
 					<div class="destination-block-two">
 						<div class="inner-box">
-							<div class="image-layer" style="background-image: url(images/resource/featured-image-14.jpg);"></div>
+							{$thumb = @@getImage('lagos-thumb');}
+							<div class="image-layer" style="background-image: url({$thumb});"></div>
 							<div class="image-box">
 								<figure class="image">
-									<a href=""><img src="images/resource/featured-image-14.jpg" alt="" title=""></a>
+									<a href=""><img src="{$thumb}" alt="" title=""></a>
 								</figure>
 							</div>
 							<div class="caption-box">
@@ -189,10 +192,11 @@
 					<!--Destination Block-->
 					<div class="destination-block-two">
 						<div class="inner-box">
-							<div class="image-layer" style="background-image: url(images/resource/featured-image-15.jpg);"></div>
+							{$thumb = @@getImage('owerri-thumb');}
+							<div class="image-layer" style="background-image: url({$thumb});"></div>
 							<div class="image-box">
 								<figure class="image">
-									<a href="yacht-tour-4.html"><img src="images/resource/featured-image-15.jpg" alt="" title=""></a>
+									<a href=""><img src="{$thumb}" alt="" title=""></a>
 								</figure>
 							</div>
 							<div class="caption-box">
@@ -214,10 +218,11 @@
 					<!--Destination Block-->
 					<div class="destination-block-two">
 						<div class="inner-box">
-							<div class="image-layer" style="background-image: url(images/resource/featured-image-16.jpg);"></div>
+							{$thumb = @@getImage('calabar-thumb');}
+							<div class="image-layer" style="background-image: url({$thumb});"></div>
 							<div class="image-box">
 								<figure class="image">
-									<a href=""><img src="images/resource/featured-image-16.jpg" alt="" title=""></a>
+									<a href=""><img src="{$thumb}" alt="" title=""></a>
 								</figure>
 							</div>
 							<div class="caption-box">
