--- a/pages/App/Views/carrental.html
+++ b/pages/App/Views/carrental.html
@@ -59,7 +59,7 @@
 					</fieldset>
 				</form>
 
-				<div class="st-feature-items row">
+				<div class="st-feature-items footer-info row">
 					<div class="col col-xs-12 col-sm-4">
 						<div class="item">
 							<h4 class="title">20,000+ vehicles</h4>
@@ -67,10 +67,12 @@
 						</div>
 					</div>
 					<div class="col col-xs-12 col-sm-4">
+						<a href="">
 						<div class="item">
 							<h4 class="title">Trust &amp; Safety</h4>
 							<div class="desc">Morbi semper fames lobortis ac</div>
 						</div>
+						</a>
 					</div>
 					<div class="col col-xs-12 col-sm-4">
 						<div class="item">
