--- a/pages/App/Views/home.html
+++ b/pages/App/Views/home.html
@@ -65,7 +65,7 @@
 					</fieldset>
 				</form>
 
-				<div class="st-feature-items row">
+				<div class="st-feature-items footer-info row">
 					<div class="col col-xs-12 col-sm-4">
 						<div class="item">
 							<h4 class="title">20,000+ properties</h4>
@@ -73,16 +73,20 @@
 						</div>
 					</div>
 					<div class="col col-xs-12 col-sm-4">
+						<a href="">
 						<div class="item">
 							<h4 class="title">Trust &amp; Safety</h4>
 							<div class="desc">Morbi semper fames lobortis ac</div>
 						</div>
+						</a>
 					</div>
 					<div class="col col-xs-12 col-sm-4">
+						<a href="">
 						<div class="item">
 							<h4 class="title">Best Price Guarantee</h4>
 							<div class="desc">Morbi semper fames lobortis ac</div>
 						</div>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -93,3 +97,9 @@
 </section>
 <div class="clearfix"></div>
 <!-- ================ Slideshow Banner End ================ -->
+
+<!-- top destinations -->
+@partial('topdestination');
+
+<!-- testimonials -->
+@partial('testimonials');
