--- a/pages/App/Static/App.css
+++ b/pages/App/Static/App.css
@@ -303,14 +303,14 @@ width: 99% !important;}
 .home-form-1 .form-control::placeholder{color: #fff;}
 .home-form-1 .br-1{border-color: rgba(255,255,255,0.2) !important;}
 .home-form-1 .nice-select::after{border-bottom: 2px solid#fff; border-right: 2px solid#fff;}
-fieldset.home-form-1 { background: rgba(255, 255, 255, 0.2); }
+fieldset.home-form-1 { background: rgba(255, 255, 255, 0.1); }
 .home-form-1 .nice-select li{color: #72849e;}
 .active-link{position: relative; top: 0; left: 0;}
 .active-link::after{position: relative; content: ''; width: 100%;
 height: 1px;background: #fff; bottom: -1px; display: block; transition: all 0.4s ease-in-out;}
 .light.bootsnav.on, .white.bootsnav.on .active-link::after{background: #ff4e00;}
-.white.bootsnav.on.no-background .active-link::after{background: #fff;}
-.bg::before{opacity: 0.4;}
+.white.bootsnav.on.no-background .active-link::after{background: rgba(255,255,255,0.5);}
+.bg::before{opacity: 0.8;}
 .destination-block-two .inner-box::before{
 	position: absolute;
 	width: 100%;
