--- a/pages/App/Views/home.html
+++ b/pages/App/Views/home.html
@@ -101,5 +101,8 @@
 <!-- top destinations -->
 @partial('topdestination');
 
+<!-- top rated places -->
+@partial('topratedplaces');
+
 <!-- testimonials -->
 @partial('testimonials');
