--- a/components/Directives/Account/AccountScreen.html
+++ b/components/Directives/Account/AccountScreen.html
@@ -5,7 +5,7 @@
 		<hy lang="html">
 			<div class="container-fluid">
 				<div class="row">
-					{$image = @@getImage('slide7-bg');}
+					{$image = @@getImage(props.image);}
 			
 					<div class="col-md-6 col-xs-12 has-bg-image" style="background-image: url({$image});">
 						<div class="has-bg-content">
@@ -14,7 +14,7 @@
 						</div>
 			
 						<div class="has-bg-footer">
-							<a hy-href="register"><img hy-src="arrow-left.png"> Become a member</a>
+							{props.nav}
 						</div>
 					</div>
 					
