--- a/platforms/web/App/Views/account/resetpassword.html
+++ b/platforms/web/App/Views/account/resetpassword.html
@@ -1,20 +1,17 @@
-{$caption = 'Please provide a customer ID and email address associated 
-with your account to continue. We would send a link to your mail 
-where you would be asked to provide a new password  
-to your account.';}
-
 <hy>
-    <AccountScreen button="Proceed" title="Password Recovery." caption="{$caption}">
+    <AccountScreen button="Proceed" title="Password Recovery." 
+    caption="Please provide a customer ID and email address associated 
+    with your account to continue. We would send a link to your mail 
+    where you would be asked to provide a new password  
+    to your account."
+    inject="nav" image="slide3-bg">
 
-        <Input name="username">Client ID / Email address</Input>
-        <Input type="password" name="password">Password</Input>
-
-        <div class="form-footer-tabs">
-            <label for="remember">
-                <input type="checkbox" id="remember" name="remember"> Remember me
-            </label>
-            <a $href="reset-password">Forgot password?</a>
-        </div>
-
+        <Input name="username">Client ID</Input>
+        <Input type="email" name="email">Email Address</Input>
+        
+        <nav>
+            <a $href="register"><img $src="arrow-left.png"> Become a member</a>
+            <a $href="login" style="display: flex;flex: min-content;justify-content: flex-end;">Account login <img $src="arrow-right.png"></a>
+        </nav>
     </AccountScreen>
 </hy>
