--- a/components/Directives/Account/Input.html
+++ b/components/Directives/Account/Input.html
@@ -1,10 +1,29 @@
 <hy directive="Input">
 	
 	<hy func="render">
-
 		<hy lang="html">
-			<input php-if::type="isset(props.type) ? props.type : 'text'" name="props.name" placeholder="{props.children}">
-		</hy>
 
+			@if (isset(props.type) && props.type == 'select')
+
+				<select name="{props.name}">
+					<option value="">{props.children}</option>
+					{$table = this.getNationality();}
+
+					@while ($row = $table->obj())
+						<option value="{$row->nationalityid}">{$row->country_name}</option>
+					@endwhile
+
+				</select>
+
+			@else
+				<input php-if::type="isset(props.type) ? props.type : 'text'" name="{props.name}" placeholder="{props.children}">
+			@endif
+
+		</hy>
+	</hy>
+
+	<hy func="getNationality">
+		return db(props.get)->get();
 	</hy>
 </hy>
+
