--- a/platforms/web/App/Views/account/login.html
+++ b/platforms/web/App/Views/account/login.html
@@ -1,5 +1,8 @@
 <hy>
-    <AccountScreen button="Proceed" title="Returning Customer." caption="Glad to have you back. Please proceed with your login details.">
+    <AccountScreen button="Proceed" 
+    title="Returning Customer."
+    caption="Glad to have you back. Please proceed with your login details."
+    inject="nav" image="slide7-bg">
 
         <Input name="username">Client ID / Email address</Input>
         <Input type="password" name="password">Password</Input>
@@ -10,6 +13,10 @@
             </label>
             <a $href="reset-password">Forgot password?</a>
         </div>
+
+        <nav>
+            <a $href="register"><img $src="arrow-left.png"> Become a member</a>
+        </nav>
 
     </AccountScreen>
 </hy>
