--- a/platforms/web/App/Static/App.css
+++ b/platforms/web/App/Static/App.css
@@ -344,7 +344,7 @@ grid-template-columns: 1fr; height: 100vh;}
 	height: 100%;
 	background: rgba(18,35,62,0.79);
 }
-.has-bg-content{padding-top: 100px;}
+.has-bg-content{padding-top: 100px; -moz-osx-font-smoothing: grayscale !important;}
 .has-bg-content, .has-bg-footer{position: relative; z-index: 3; flex: 1;}
 .has-bg-content h1{color: #fff; font-weight: 800; font-family: 'Poppins-Bold';
 font-size: 3em;}
@@ -367,14 +367,14 @@ font-size: 14px; grid-column: 1/3;}
 .has-bg-form-area .form-container{background: #F5F5F5;
 padding: 40px; border-radius: 35px;}
 .has-bg-form-area .form-container input, .has-bg-form-area .form-container select{width: 100%; margin-bottom: 25px;
-height: 50px; border: none; border-radius: 35px; padding: 35px; font-size: 16px;}
+height: 50px; border: none; border-radius: 35px; padding: 35px; font-size: 14px;}
 .has-bg-form-area .form-container select{color: #000; padding: 20px; height: 70px;
 padding-left: 35px; padding-right: 35px;}
 .has-bg-form-area .form-container input[type="checkbox"]{width: initial; height: initial;
 padding: 0px; margin-bottom: 0px; margin-right: 10px;}
 .has-bg-form-area .form-container input::placeholder{color: #2a3646; opacity: 1;}
 .form-container .form-footer-tabs{display: grid; grid-template-columns: 1fr 1fr;}
-.form-container .form-footer-tabs label{display: flex; align-items: center; font-size: 16px;
+.form-container .form-footer-tabs label{display: flex; align-items: center; font-size: 14px;
 color: #2a3646; padding-left: 10px;}
 .form-container .form-footer-tabs a{text-align: right;}
 .has-bg-form-area .form-container button{border: none; border-radius: 35px;
