--- a/Centurion/Public/Templates/main-sidebar.html
+++ b/Centurion/Public/Templates/main-sidebar.html
@@ -38,6 +38,19 @@
 
 @endfetch
 
+@ifCustomer
+    <!-- become a member -->
+    <li class="nav-item">
+        <a $href="dashboard/become-a-partner" class="nav-link">
+          <i class="nav-icon fas fa-users"></i>
+          <p>
+            Become a partner
+            <span class="right badge badge-danger">New</span>
+          </p>
+        </a>
+    </li>
+@endif
+
 <!-- logout link -->
 <li class="nav-item">
     <a $href="dashboard/logout" class="nav-link">
